# robot_gait_generator

./: README.md  pyproject.toml
examples/: example_crocoddyl_generator.py  example_quadruped_crocoddyl_generator.py  tst_lin_feet_traj.py
robot_gait_generator/: crocoddyl_gait_model_interface.py  crocoddyl_gait_problems_interface.py  foot_trajectories.py  foot_trajectory_generator.py  foot_trajectory_spline.py  gait_scheduler.py
robot_gait_generator/crocoddyl/: __init__.py  crocoddyl_gait_model_interface.py  crocoddyl_gait_problems_interface.py
